--- a/frontend/src/stylesheets/profile.css
+++ b/frontend/src/stylesheets/profile.css
@@ -6,14 +6,14 @@
     margin-top: 5%;
 }
 
-.profile-header {
+.profile-header,
+.profile-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
     max-width: 700px;
-    /* border: 1px solid black; */
     border-radius: 3px;
     padding: 15px 25px;
     box-shadow: 0 0 5px #888888;
@@ -29,4 +29,8 @@
     font-size: 20px;
     font-weight: 600;
     padding: 10px 5px;
+}
+
+.profile-content {
+    margin-top: 5%;
 }
