--- a/frontend/src/stylesheets/transaction.css
+++ b/frontend/src/stylesheets/transaction.css
@@ -14,7 +14,8 @@
     height: 29px;
 }
 
-.filter-search-btn {
+.filter-search-btn,
+.transaction-add-btn {
     background-color: #0072db;
     color: white;
     font-weight: 600;
@@ -22,4 +23,27 @@
     border-radius: 3px;
     padding: 10px;
     margin: 5px;
+}
+
+.transaction-compose-header {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 10px;
+    justify-content: space-evenly;
+    border-bottom: 1px solid gray;
+    padding-bottom: 10px;
+}
+
+.transaction-compose-header > .compose-header-title {
+    font-size: 20px;
+    font-weight: 600;
+    padding-bottom: 5px;
+}
+
+.compose-header {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 5px;
+    align-items:center
 }
