--- a/frontend/src/stylesheets/transaction.css
+++ b/frontend/src/stylesheets/transaction.css
@@ -35,15 +35,28 @@
     padding-bottom: 10px;
 }
 
-.transaction-compose-header > .compose-header-title {
-    font-size: 20px;
-    font-weight: 600;
-    padding-bottom: 5px;
-}
-
 .compose-header {
     display: flex;
     justify-content: space-evenly;
     padding: 5px;
     align-items:center
+}
+
+.transaction-header {
+    column-count: 4;
+    width: 100%;
+    font-weight: 600;
+    padding: 5px;
+}
+
+.transaction-content {
+    column-count: 4;
+    width: 100%;
+    border-top: 1px solid gray;
+    padding: 10px 0;
+}
+
+.transaction-header > p:first-child,
+.transaction-content > p:first-child {
+    margin-top: 0;
 }
