--- a/frontend/src/stylesheets/landing.css
+++ b/frontend/src/stylesheets/landing.css
@@ -34,3 +34,10 @@ footer {
     text-align: center;
     padding: 10px;
 }
+
+.fa-money-check-alt {
+    text-align: center;
+    font-size: 45vw;
+    padding: 100px 0;
+    color: #0072db;
+}
