--- a/frontend/src/stylesheets/landing.css
+++ b/frontend/src/stylesheets/landing.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
 }
 
 .landing-content {
@@ -25,8 +26,8 @@
 }
 
 footer {
-    position: fixed;
-    left: 0;
+    position: absolute;
+    /* left: 0; */
     bottom: 0;
     width: 100%;
     background-color: #383838;
