Add styling when button hovering

--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -53,3 +53,10 @@
     font-weight: 600;
     padding: 15px 0;
 }
+
+.signin-btn:hover,
+.login-btn:hover,
+.logout-btn:hover {
+    cursor: pointer;
+    color: #0072db;
+}
